--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "helmet": "^3.5.0",
     "joi": "^13.2.0",
     "joi-date-extensions": "^1.2.0",
+    "joi-postcode": "^3.0.0",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
