--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     depends_on:
       - licence-db
       - elite2-api
+      - hdc-pdf-generator
     ports:
       - "3000:3000"
     healthcheck:
@@ -22,6 +23,7 @@ services:
       - DB_NAME=licences
       - HOST=licences.hmpps.dsd.test
       - NOMIS_API_URL=http://elite2-api:8080/api
+      - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8081
 
   elite2-api:
     image: sysconjusticesystems/elite2-api:latest
@@ -52,6 +54,19 @@ services:
     environment:
       - SA_PASSWORD=aV3rY53CRETPA55W0RD
       - ACCEPT_EULA=Y
+
+  hdc-pdf-generator:
+    image: pdfgenerator
+    networks:
+      - hmpps
+    container_name: hdc-pdfgenerator
+    restart: always
+    ports:
+      - "8081:8081"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/healthcheck"]
+    environment:
+      - PORT=8081
 
 networks:
   hmpps:
