--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,18 +99,13 @@ jobs:
              docker push mojdigitalstudio/licences:latest
 
   deploy_release_to_eb:
-      <<: *defaults
+      working_directory: ~/noms-digital-studio/licences
+      docker:
+        - image: mojdigitalstudio/circleci-node-awsebcli
       steps:
         - checkout
         - attach_workspace:
             at: ~/noms-digital-studio/licences
-        - deploy:
-            name: Install elastic beanstalk CLI
-            command: |
-              sudo apt-get install python-pip python-dev build-essential
-              sudo pip install --upgrade pip
-              pip install --user awsebcli --ignore-installed
-              pip install --user pyYAML>=3.12 awsebcli --upgrade
         - deploy:
             name: Deploy to Elastic Beanstalk Dev
             command: |
