--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "test": "mocha",
     "test-with-coverage": "nyc --reporter=text --check-coverage --lines 85 mocha",
     "test-with-coverage-ci": "nyc --reporter=html --check-coverage --lines 85 mocha --reporter mocha-junit-reporter",
-    "snyk-protect": "snyk protect",
     "plant-beanstalk": "node bin/plant-beanstalk.js",
     "lint": "eslint .",
     "record-build-info": "node ./bin/record-build-info",
     "wait-for-deploy": "node ./bin/wait-for-deploy",
-    "prepublish": "npm run snyk-protect",
     "build": "npm run clean && npm run css-build",
     "dev": "npm run build && npm run lint && npm run test && npm run start-watchmode",
     "css-build": "./bin/build-css",
@@ -26,8 +24,7 @@
     "knex": "knex",
     "knex-migrate": "knex-migrate",
     "migrate": "knex migrate:latest",
-    "seed": "knex seed:run",
-    "prepare": "npm run snyk-protect"
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -41,92 +38,61 @@
   "homepage": "https://github.com/noms-digital-studio/licences#readme",
   "dependencies": {
     "applicationinsights": "^1.0.3",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es3": "^1.0.1",
-    "bcryptjs": "^2.4.0",
-    "body-parser": "^1.16.0",
-    "case": "^1.5.2",
-    "compression": "^1.6.2",
-    "config": "^1.24.0",
+    "body-parser": "^1.18.3",
+    "case": "^1.5.5",
+    "compression": "^1.7.2",
+    "config": "^1.30.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-alpha.2",
-    "copyfiles": "^1.2.0",
+    "cookie-session": "^2.0.0-beta.3",
     "csurf": "^1.9.0",
-    "dotenv": "^4.0.0",
-    "eslint": "^3.18.0",
-    "eslint-config-google": "^0.7.1",
-    "express": "^4.14.0",
+    "dotenv": "^6.0.0",
+    "eslint": "^5.0.1",
+    "eslint-config-google": "^0.9.1",
+    "express": "^4.16.3",
     "express-request-id": "^1.4.0",
     "express-winston": "^2.3.0",
-    "git-rev-sync": "^1.9.0",
-    "govuk-elements-sass": "^3.0.2",
+    "govuk-elements-sass": "^3.1.2",
     "govuk_frontend_toolkit": "^5.2.0",
-    "govuk_template_jinja": "^0.19.2",
-    "helmet": "^3.5.0",
-    "joi": "^13.2.0",
+    "govuk_template_jinja": "^0.24.0",
+    "helmet": "^3.12.1",
+    "joi": "^13.4.0",
     "joi-date-extensions": "^1.2.0",
     "joi-postcode": "^3.0.0",
     "jquery": "^1.12.4",
-    "jsonwebtoken": "^8.1.0",
-    "knex": "^0.13.0",
-    "knex-migrate": "^1.3.0",
-    "moment": "^2.18.1",
-    "mssql": "^3.3.0",
-    "ncp": "^2.0.0",
-    "node-sass": "^4.5.3",
+    "jsonwebtoken": "^8.3.0",
+    "knex": "^0.15.0",
+    "knex-migrate": "^1.6.1",
+    "moment": "^2.22.2",
+    "node-sass": "^4.9.0",
     "node-sass-middleware": "^0.11.0",
-    "nodemon": "^1.12.1",
-    "on-finished": "^2.3.0",
-    "passport": "^0.3.2",
+    "nodemon": "^1.17.5",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.4.0",
     "path": "^0.12.7",
-    "pg": "^7.4.1",
-    "poll-endpoint-for": "0.0.3",
-    "prompt": "^1.0.0",
-    "pug": "^2.0.0-rc.4",
+    "pg": "^7.4.3",
+    "poll-endpoint-for": "0.0.4",
+    "pug": "^2.0.3",
     "querystring": "^0.2.0",
     "ramda": "^0.25.0",
-    "request-promise": "^4.1.1",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.2.2",
-    "snyk": "^1.42.3",
-    "superagent": "^3.6.0",
-    "tedious": "^2.0.0",
-    "util": "^0.10.3",
-    "uuid": "^3.0.1",
-    "validator": "^9.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^2.4.1",
-    "webpack-stream": "^3.2.0",
+    "superagent": "^3.8.3",
+    "util": "^0.11.0",
+    "uuid": "^3.3.2",
     "winston": "^2.3.1",
     "winston-azure-application-insights": "^1.3.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "dirty-chai": "^2.0.1",
-    "gulp-spawn-mocha": "^3.1.0",
     "istanbul": "^0.4.5",
-    "jsdom": "9.12.0",
-    "jsdom-global": "2.1.1",
-    "mocha": "^3.2.0",
-    "mocha-junit-reporter": "^1.13.0",
-    "nock": "^9.0.2",
-    "nyc": "^11.4.1",
-    "proxyquire": "^1.7.11",
-    "sinon": "^1.17.7",
-    "sinon-as-promised": "^4.0.3",
-    "sinon-chai": "^2.9.0",
-    "sinon-stub-promise": "^4.0.0",
-    "supertest": "^3.0.0"
-  },
-  "snyk": true
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.17.0",
+    "nock": "^9.4.1",
+    "nyc": "^12.0.2",
+    "proxyquire": "^2.0.1",
+    "sinon": "^6.1.3",
+    "sinon-chai": "^3.2.0",
+    "supertest": "^3.1.0"
+  }
 }
