--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   working_directory: ~/noms-digital-studio/licences
   docker:
-    - image: circleci/node:8.10.0-browsers
+    - image: circleci/node:8
 
 version: 2
 jobs:
@@ -9,25 +9,18 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
       - restore_cache:
-          keys:
-            - node_modules-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-            - node_modules-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
             - node_modules
-            - yarn-cache
-      - run:
-          command: node -v
-      - run:
-          name: yarn install
-          command: yarn --frozen-lockfile
-      - save_cache:
-          key: node_modules-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-          paths:
-            - ./node_modules
-      - save_cache:
-          key: yarn-cache
-          paths:
-            - ~/.cache/yarn
       - run:
           name: Linter check
           command: yarn run lint
