--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "homepage": "https://github.com/noms-digital-studio/licences#readme",
   "dependencies": {
-    "applicationinsights": "^1.0.3",
     "body-parser": "^1.18.3",
     "case": "^1.5.5",
     "compression": "^1.7.2",
@@ -78,8 +77,7 @@
     "superagent": "^3.8.3",
     "util": "^0.11.0",
     "uuid": "^3.3.2",
-    "winston": "^2.3.1",
-    "winston-azure-application-insights": "^1.3.0"
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
