--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "querystring": "^0.2.0",
     "ramda": "^0.25.0",
     "superagent": "^3.8.3",
+    "swagger-ui-express": "^4.0.1",
     "util": "^0.11.0",
     "uuid": "^3.3.2",
     "winston": "^2.3.1"
