--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.4.0",
     "path": "^0.12.7",
     "pg": "^7.4.3",
     "poll-endpoint-for": "0.0.4",
