--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,8 @@ jobs:
             command: |
               VERSION=$(egrep licences Dockerrun.aws.json | awk -F"\"" '{print $4}' |  awk -F":" '{print $2}')
               ~/.local/bin/eb deploy licences-stage --label ${VERSION}
+        - store_artifacts:
+              path: Dockerrun.aws.json
 
   accept_stage:
     docker:
