--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,8 @@ jobs:
             name: Deploy to Elastic Beanstalk Stage
             command: |
               VERSION=$(egrep licences Dockerrun.aws.json | awk -F"\"" '{print $4}' |  awk -F":" '{print $2}')
-              ~/.local/bin/eb deploy licences-stage --label ${VERSION}
+              GIT_REF=$(egrep gitRef build-info.json  | awk -F"\"" '{print $8}')
+              git tag -a ${VERSION} ${GIT_REF}
         - store_artifacts:
               path: Dockerrun.aws.json
 
