--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,11 @@ services:
       - DB_NAME=licences
       - DB_SSL_ENABLED=no
       - NOMIS_API_URL=http://licences-nomis-mocks:9090/elite2api
-      - NOMIS_AUTH_URL=http://licences-nomis-mocks:9090/elite2api
+      - NOMIS_AUTH_URL=http://nomis-oauth2-server:8080/auth
+      - NOMIS_AUTH_EXTERNAL_URL=http://localhost:8080/auth
       - HOST=licences.hmpps.dsd.test
-      - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8080
+      - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8081
+      - AUTH_STRATEGY=oauth
 
   licences-nomis-mocks:
     image: mojdigitalstudio/licences-nomis-mocks:latest
