--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "notifications-node-client": "^4.5.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.4.0",
     "path": "^0.12.7",
     "pg": "^7.4.3",
     "poll-endpoint-for": "0.0.4",
