--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,36 @@ jobs:
              docker push mojdigitalstudio/licences:$BUILD_VERSION
              docker push mojdigitalstudio/licences:latest
 
+  build_patch_docker:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/noms-digital-studio/licences
+      - setup_remote_docker:
+          exclusive: true
+      - run:
+          name: Build container and publish to docker hub (master only)
+          command: |
+             VERSION=$(git describe)
+             GIT_REF=$(egrep gitRef build-info.json  | awk -F"\"" '{print $8}')
+             BUILD_VERSION=${VERSION}-patch
+
+             docker build --rm=false . \
+                 --build-arg BUILD_NUMBER=$BUILD_VERSION \
+                 --build-arg GIT_REF=$GIT_REF \
+                 --tag "mojdigitalstudio/licences:$BUILD_VERSION" \
+                 --label "maintainer=licences-team@digital.justice.gov.uk" \
+                 --label "build.number=$CIRCLE_BUILD_NUM" \
+                 --label "build.url=$CIRCLE_BUILD_URL" \
+                 --label "build.gitref=$GIT_REF"
+
+             docker login -u $DOCKER_USER -p $DOCKER_PASS
+             docker push mojdigitalstudio/licences:$BUILD_VERSION
+             npm run plant-beanstalk ${BUILD_VERSION}
+      - store_artifacts:
+          path: Dockerrun.aws.json
+
   deploy_release_to_eb:
       working_directory: ~/noms-digital-studio/licences
       docker:
@@ -157,6 +187,12 @@ workflows:
             branches:
               only:
                 - master
+      - build_patch_docker:
+          requires:
+            - test
+          filters:
+            branches:
+              only:
                 - /patch-.*/
       - deploy_release_to_eb:
           requires:
