link to prisonstaffhub global search. remove internal seach code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,79 +1,102 @@
 version: '3.1'
 services:
-  licences:
-    image: mojdigitalstudio/licences:latest
-    networks:
-      - hmpps
-    depends_on:
-      - licence-db
-      - licences-nomis-mocks
-      - hdc-pdfgenerator
-      - nomis-oauth2-server
-    ports:
-      - "3000:3000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
-    environment:
-      - PORT=3000
-      - DB_USER=licences
-      - DB_PASS=licences
-      - DB_SERVER=licence-db
-      - DB_NAME=licences
-      - DB_SSL_ENABLED=no
-      - NOMIS_API_URL=http://licences-nomis-mocks:9090/elite2api
-      - NOMIS_AUTH_URL=http://nomis-oauth2-server:8080/auth
-      - NOMIS_AUTH_EXTERNAL_URL=http://localhost:8080/auth
-      - HOST=licences.hmpps.dsd.test
-      - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8080
-      - AUTH_STRATEGY=oauth
+    licences:
+        image: mojdigitalstudio/licences:latest
+        networks:
+            - hmpps
+        container_name: licences
+        depends_on:
+            - licence-db
+            - licences-nomis-mocks
+            - hdc-pdfgenerator
+            - nomis-oauth2-server
+        ports:
+            - "3000:3000"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+        environment:
+            - PORT=3000
+            - DB_USER=licences
+            - DB_PASS=licences
+            - DB_SERVER=licence-db
+            - DB_NAME=licences
+            - DB_SSL_ENABLED=no
+            - NOMIS_API_URL=http://licences-nomis-mocks:9090/elite2api
+            - NOMIS_AUTH_URL=http://nomis-oauth2-server:8080/auth
+            - NOMIS_AUTH_EXTERNAL_URL=http://localhost:8080/auth
+            - HOST=licences.hmpps.dsd.test
+            - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8080
+            - AUTH_STRATEGY=oauth
+            - GLOBAL_SEARCH_URL=http://localhost:3002/global-search
 
-  licences-nomis-mocks:
-    image: mojdigitalstudio/licences-nomis-mocks:latest
-    networks:
-      - hmpps
-    container_name: licences-nomis-mocks
-    ports:
-      - "9090:9090"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9090/elite2api/health"]
+    licences-nomis-mocks:
+        image: mojdigitalstudio/licences-nomis-mocks:latest
+        networks:
+            - hmpps
+        container_name: licences-nomis-mocks
+        ports:
+            - "9090:9090"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:9090/elite2api/health"]
 
-  licence-db:
-    image: postgres
-    networks:
-      - hmpps
-    container_name: licence-db
-    restart: always
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=licences
-      - POSTGRES_USER=licences
-      - POSTGRES_DB=licences
+    licence-db:
+        image: postgres
+        networks:
+            - hmpps
+        container_name: licence-db
+        restart: always
+        ports:
+            - "5432:5432"
+        environment:
+            - POSTGRES_PASSWORD=licences
+            - POSTGRES_USER=licences
+            - POSTGRES_DB=licences
 
-  hdc-pdfgenerator:
-    image: mojdigitalstudio/pdf-generator
-    networks:
-      - hmpps
-    container_name: hdc-pdfgenerator
-    restart: always
-    ports:
-      - "8081:8080"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-    environment:
-      - PORT=8080
+    hdc-pdfgenerator:
+        image: mojdigitalstudio/pdf-generator
+        networks:
+            - hmpps
+        container_name: hdc-pdfgenerator
+        restart: always
+        ports:
+            - "8081:8080"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+        environment:
+            - PORT=8080
 
-  nomis-oauth2-server:
-      image: mojdigitalstudio/nomis-oauth2-server:latest
-      networks:
-      - hmpps
-      container_name: nomis-oauth2-server
-      ports:
-      - "8080:8080"
-      healthcheck:
-          test: ["CMD", "curl", "-f", "http://localhost:8080/auth/health"]
-      environment:
-      - SPRING_PROFILES_ACTIVE=dev
+    nomis-oauth2-server:
+        image: mojdigitalstudio/nomis-oauth2-server:latest
+        networks:
+            - hmpps
+        container_name: nomis-oauth2-server
+        ports:
+            - "8080:8080"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8080/auth/health"]
+        environment:
+            - SPRING_PROFILES_ACTIVE=dev
+
+    prisonstaffhub:
+        image: mojdigitalstudio/whereabouts:latest
+        networks:
+            - hmpps
+        depends_on:
+            - nomis-oauth2-server
+        container_name: prisonstaffhub
+        ports:
+            - "3002:3002"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:3002/health"]
+        environment:
+            - PORT=3002
+            - NODE_ENV=development
+            - REMOTE_AUTH_STRATEGY=true
+            - OAUTH_ENDPOINT_URL=http://nomis-oauth2-server:8080/auth/
+            - OAUTH_ENDPOINT_UI_URL=http://localhost:8080/auth/
+            - API_ENDPOINT_URL=http://licences-nomis-mocks:9090/elite2api/
+            - NN_ENDPOINT_URL=http://localhost:3007/
+            - LICENCES_URL=http://localhost:3000/
 
 networks:
-  hmpps:
+    hmpps:
