--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
             - DB_SERVER=licence-db
             - DB_NAME=licences
             - DB_SSL_ENABLED=no
-            - NOMIS_API_URL=http://licences-nomis-mocks:9090/elite2api
+            - NOMIS_API_URL=http://licences-nomis-mocks:9090/elite2api/api
             - NOMIS_AUTH_URL=http://nomis-oauth2-server:8080/auth
             - NOMIS_AUTH_EXTERNAL_URL=http://localhost:8080/auth
             - HOST=licences.hmpps.dsd.test
