--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,8 @@ jobs:
         environment:
           POSTGRES_USER: licences
           POSTGRES_DB: licences
+    environment:
+      DB_SSL_ENABLED: false
     steps:
       - checkout
       - attach_workspace:
