--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
           key: gradle-cache-{{ checksum "licences-specs/build.gradle" }}
       - run:
           name: Run Integration Tests
-          command: ./gradlew mockTest
+          command: ./gradlew mockTest --info
       - save_cache:
           key: gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
           paths:
