LIC-881: Fix staging feature tests and tidy auth code

--- a/package.json
+++ b/package.json
@@ -33,9 +33,15 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
+    "linters": {
+      "*.{js,json,css,md}": [
+        "prettier --write",
+        "eslint --fix",
+        "git add"
+      ]
+    },
+    "ignore": [
+      "package.json"
     ]
   },
   "repository": {
