--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "pug": "^2.0.3",
     "querystring": "^0.2.0",
     "ramda": "^0.25.0",
+    "romannumerals": "^1.1.1",
     "superagent": "^3.8.3",
     "swagger-ui-express": "^4.0.2",
     "util": "^0.11.1",
