--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "knex": "^0.15.2",
     "knex-migrate": "^1.7.0",
     "moment": "^2.24.0",
+    "moment-business-days": "^1.1.3",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.18.10",
