--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "prettier/prettier": ["error"],
     "no-use-before-define": "off",
     "prefer-destructuring": "warn",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "no-console": 2
   },
   "plugins": ["prettier"]
 }
