--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "homepage": "https://github.com/noms-digital-studio/licences#readme",
   "dependencies": {
     "adm-zip": "^0.4.13",
+    "advisory-lock": "^1.1.1",
     "applicationinsights": "^1.1.0",
     "body-parser": "^1.18.3",
     "case": "^1.6.1",
@@ -85,6 +86,7 @@
     "moment-business-days": "^1.1.3",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
+    "node-schedule": "^1.3.2",
     "nodemon": "^1.18.10",
     "notifications-node-client": "^4.6.0",
     "passport": "^0.4.0",
