--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,7 +2,7 @@ branch-defaults:
   master:
     environment: licences-stage
 deploy:
-  artifact: Dockerrun.aws.json
+  artifact: deploy.zip
 global:
   application_name: licences
   default_region: eu-west-2
