--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "moment-business-days": "^1.1.3",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
+    "node-schedule": "^1.3.2",
     "nodemon": "^1.18.10",
     "notifications-node-client": "^4.6.0",
     "passport": "^0.4.0",
@@ -96,6 +97,7 @@
     "querystring": "^0.2.0",
     "ramda": "^0.25.0",
     "romannumerals": "^1.1.1",
+    "string-hash": "^1.1.3",
     "superagent": "^3.8.3",
     "swagger-ui-express": "^4.0.2",
     "util": "^0.11.1",
