LIC-fix-docker-compose docker-compose.yml: Add ENABLE_TEST_UTILS=true to the environment section of the licences service. app.js: test that enableTestUtils === 'true'. LicencesApi.create: test response status code and fail if > 299.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - HOST=licences.hmpps.dsd.test
       - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8080
       - GLOBAL_SEARCH_URL=http://localhost:3002/global-search
+      - ENABLE_TEST_UTILS=true
 
   licences-nomis-mocks:
     image: mojdigitalstudio/licences-nomis-mocks:latest
