--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "homepage": "https://github.com/noms-digital-studio/licences#readme",
   "dependencies": {
+    "@ministryofjustice/express-template-to-pdf": "^1.0.0",
     "adm-zip": "^0.4.13",
     "applicationinsights": "^1.1.0",
     "body-parser": "^1.18.3",
@@ -121,6 +122,7 @@
     "mocha-junit-reporter": "^1.18.0",
     "nock": "^9.6.1",
     "nyc": "^14.1.1",
+    "pdf-parse": "^1.1.1",
     "prettier": "1.16.4",
     "proxyquire": "^2.1.0",
     "sinon": "^6.3.5",
