--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   "homepage": "https://github.com/noms-digital-studio/licences#readme",
   "dependencies": {
     "adm-zip": "^0.4.13",
-    "applicationinsights": "^1.1.0",
+    "applicationinsights": "^1.4.0",
+    "applicationinsights-native-metrics": "0.0.5",
     "body-parser": "^1.18.3",
     "case": "^1.6.1",
     "compression": "^1.7.3",
