Use newer PDF lib and configure it to work in Docker
Factor out common forms PDF layout and tweak styles to look OK via new PDF lib

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .port.tmp
 public
 assets/stylesheets/application.css
-assets/stylesheets/pdf.css
+assets/stylesheets/forms-pdf.css
 lib/govuk_template.html
 govuk_modules
 node_modules/*
