DT-72: Updated Dependency Health endpoint call to /ping

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@ministryofjustice/express-template-to-pdf": "^2.1.0",
     "adm-zip": "^0.4.13",
+    "agentkeepalive": "^4.0.2",
     "applicationinsights": "^1.4.0",
     "applicationinsights-native-metrics": "0.0.5",
     "body-parser": "^1.18.3",
