--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
       ENABLE_TEST_UTILS: true
       NOMIS_API_URL: https://licences-demo-mocks.herokuapp.com/elite2api/api
       NOMIS_AUTH_URL: https://nomis-oauth2-server.herokuapp.com/auth
-      PDF_SERVICE_HOST: https://licences-nomis-mocks.herokuapp.com
+      PDF_SERVICE_HOST: https://licences-demo-mocks.herokuapp.com/pdfgenerator
     steps:
       - checkout
       - attach_workspace:
