--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
             - assets/stylesheets
 
   integration_tests:
-    working_directory: ~/app
+    working_directory: ~/noms-digital-studio/licences
     executor: builder
     steps:
       - checkout
