--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -2,7 +2,9 @@
 secrets:
   APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue
   SESSION_SECRET: somesecretvalue
+  API_CLIENT_ID: somesecretvalue
   API_CLIENT_SECRET: somesecretvalue
+  ADMIN_API_CLIENT_ID: somesecretvalue
   ADMIN_API_CLIENT_SECRET: somesecretvalue
   TAG_MANAGER_KEY: somesecretvalue
   NOTIFY_API_KEY: somesecretvalue
