--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,12 @@ jobs:
     executor: builder
     steps:
       - checkout
+      - helm/install-helm-client:
+          version: v2.13.1
+      - run:
+          name: Run helm lint
+          command: helm licences --values=values-dev.yaml --values=secrets-example.yaml
+          working_directory: helm_deploy
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
