--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,7 @@ workflows:
       - feature_tests:
           requires:
             - integration_tests
-      - build_docker
+      - build_docker:
           filters:
             branches:
               only: master
