--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -42,12 +42,15 @@ whitelist:
   sodexo-northumberland: "88.98.48.10/32"
   thameside-private-prison: "217.22.14.151/32"
   durham-tees-valley: "51.179.193.241/32"
-  ark-nps-hmcts-ttp1: "195.59.75.0/24"
-  ark-nps-hmcts-ttp2: "194.33.192.0/25"
-  ark-nps-hmcts-ttp3: "194.33.193.0/25"
-  ark-nps-hmcts-ttp4: "194.33.196.0/25"
-  ark-nps-hmcts-ttp5: "194.33.197.0/25"
   oakwood: "194.176.200.113/32"
+  dxc-mitcheldean: "195.92.38.16/28"
+  ark-dom1-ttp1: "195.59.75.0/24"
+  ark-dom1-farnborough: "194.33.192.0/24"
+  ark-dom1-farnborough-psn: "51.247.3.0/24"
+  ark-dom1-corsham: "194.33.196.0/24"
+  ark-dom1-corsham-psn: "51.247.4.0/24"
+  ark-dom1-non-live-1: "194.33.193.0/25"
+  ark-dom1-non-live-2: "194.33.197.0/25"
   cloudplatform-live1-1: "35.178.209.113/32"
   cloudplatform-live1-2: "3.8.51.207/32"
   cloudplatform-live1-3: "35.177.252.54/32"
