--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -12,8 +12,10 @@ image:
 ingress:
   enabled: true
   enable_whitelist: true
-  host: licences.prison.service.justice.gov.uk
-  cert_secret: licences-cert
+  #host: licences.prison.service.justice.gov.uk
+  #cert_secret: licences-cert
+  host: licences.service.hmpps.dsd.io
+  cert_secret: licences-cert-dsd
   path: /
 
 env:
