set correct role for community api, remove feature tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -250,7 +250,7 @@ workflows:
       - deploy_dev:
           requires:
             - build_docker
-            - feature_tests
+            #- feature_tests
           filters:
             branches:
               only: master
