--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -56,7 +56,7 @@ whitelist:
   cloudplatform-live1-1: "35.178.209.113/32"
   cloudplatform-live1-2: "3.8.51.207/32"
   cloudplatform-live1-3: "35.177.252.54/32"
-  interservfls: "51.179.196.131"
-  sodexo1: "80.86.46.16"
-  sodexo2: "80.86.46.17"
-  sodexo3: "80.86.46.18"
+  interservfls: "51.179.196.131/32"
+  sodexo1: "80.86.46.16/32"
+  sodexo2: "80.86.46.17/32"
+  sodexo3: "80.86.46.18/32"
