--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -18,7 +18,7 @@ ingress:
 
 env:
   DOMAIN:
-  NOMIS_API_URL: "https://gateway.t3.nomis-api.hmpps.dsd.io/elite2api/api" 
+  NOMIS_API_URL: "https://gateway.t3.nomis-api.hmpps.dsd.io/elite2api/api"
   NOMIS_AUTH_URL: "https://gateway.t3.nomis-api.hmpps.dsd.io/auth"
   GLOBAL_SEARCH_URL: "https://whereabouts-dev.prison.service.justice.gov.uk/global-search"
   AUTH_STRATEGY: "oauth"
@@ -28,4 +28,5 @@ env:
   SCHEDULED_JOBS_OVERLAP: "5000"
   NOTIFY_ACTIVE_TEMPLATES: "CA_RETURN,CA_DECISION,RO_NEW,RO_TWO_DAYS,RO_DUE,RO_OVERDUE,DM_NEW,DM_TO_CA_RETURN"
   RO_SERVICE_TYPE: "DELIUS"
-  DELIUS_API_URL: "https://community-proxy.apps.live-1.cloud-platform.service.justice.gov.uk/communityapi/api"
+  DELIUS_API_URL: "https://community-proxy.apps.live-1.cloud-platform.service.justice.gov.uk/communityapi"
+  DELIUS_API_PREFIX: "/api"
