--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -17,7 +17,7 @@ ingress:
   path: /
 
 env:
-  NOMIS_API_URL: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/elite2api/api" 
+  NOMIS_API_URL: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/elite2api/api"
   NOMIS_AUTH_URL: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/auth"
   GLOBAL_SEARCH_URL: "https://whereabouts-preprod.prison.service.justice.gov.uk/global-search"
   AUTH_STRATEGY: "oauth"
@@ -27,7 +27,8 @@ env:
   SCHEDULED_JOBS_OVERLAP: "5000"
   NOTIFY_ACTIVE_TEMPLATES: "CA_RETURN,CA_DECISION,RO_NEW,DM_NEW,DM_TO_CA_RETURN"
   RO_SERVICE_TYPE: "NOMIS"
-  DELIUS_API_URL: 
+  DELIUS_API_URL: "https://community-api-secure.pre-prod.delius.probation.hmpps.dsd.io"
+  DELIUS_API_PREFIX: "/secure"
 
 whitelist:
   office: "217.33.148.210/32"
