--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,7 @@ workflows:
       - deploy_dev:
           requires:
             - build_docker
-            #- feature_tests
+            - feature_tests
             - integration_tests
           filters:
             branches:
