DT-334: Bump replicas, set surge and anti affinity

--- a/helm_deploy/licences/templates/deployment.yaml
+++ b/helm_deploy/licences/templates/deployment.yaml
@@ -12,9 +12,10 @@ spec:
   revisionHistoryLimit: 2
   minReadySeconds: 10
   strategy:
+    type: RollingUpdate
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
+      maxSurge: 100%
+      maxUnavailable: 50%
   selector:
     matchLabels:
       app: {{ template "app.name" . }}
@@ -25,9 +26,21 @@ spec:
         app: {{ template "app.name" . }}
         release: {{ .Release.Name }}
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - {{ template "app.name" . }}
+                topologyKey: kubernetes.io/hostname
       containers:
         - name: {{ template "app.name" . }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}" 
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.image.port }}
