--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ orbs:
   helm: circleci/helm@0.1.2
 
 jobs:
-  validate_build:
+  validate:
     executor: builder
     steps:
       - checkout
@@ -176,7 +176,7 @@ jobs:
       - store_test_results:
           path: licences-specs/build/test-results
 
-  build_docker:
+  build:
     executor: deployer
     steps:
       - checkout
@@ -236,23 +236,23 @@ workflows:
   version: 2
   build-test-and-deploy:
     jobs:
-      - validate_build:
+      - validate:
           filters:
             tags:
               ignore: /.*/
       - integration_tests:
           requires:
-            - validate_build
+            - validate
       - feature_tests:
           requires:
             - integration_tests
-      - build_docker:
+      - build:
           filters:
             branches:
               only: master
       - deploy_dev:
           requires:
-            - build_docker
+            - build
             - feature_tests
             - integration_tests
           filters:
